[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Objetos.gd" type="Script" id=1]
[ext_resource path="res://assets/Ponta.png" type="Texture" id=2]
[ext_resource path="res://assets/tomada.png" type="Texture" id=3]
[ext_resource path="res://assets/pilha_menos.png" type="Texture" id=4]

[sub_resource type="ConcavePolygonShape2D" id=1]
segments = PoolVector2Array( -34, 4, -7, 20, -34, -4, -4, -20, -33.5, 4, -33.5, -4, -10, -20, 12, -20, -10, 20, 12, 20, 13.5, 18, 13.5, -18, 14, -11, 32, -11, 14, -8, 32, -8, 14, 11, 32, 11, 14, 8, 32, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23.5266, 11.5648 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17.8891, 21.1661 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 250, 250 )

[node name="Objetos" type="Node2D"]
script = ExtResource( 1 )
Objeto = 3
Carga = -10.0

[node name="Ponta" type="StaticBody2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="Ponta"]
texture = ExtResource( 2 )

[node name="Colisao" type="CollisionShape2D" parent="Ponta"]
shape = SubResource( 1 )

[node name="Tomada" type="Area2D" parent="."]
visible = false

[node name="Sprite" type="Sprite" parent="Tomada"]
texture = ExtResource( 3 )

[node name="Colisao" type="CollisionShape2D" parent="Tomada"]
shape = SubResource( 2 )

[node name="Pilha" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="Pilha"]
texture = ExtResource( 4 )

[node name="Colisao" type="CollisionShape2D" parent="Pilha"]
shape = SubResource( 3 )

[node name="Magnetico" type="Area2D" parent="."]
visible = false

[node name="Colisao" type="CollisionShape2D" parent="Magnetico"]
shape = SubResource( 4 )
[connection signal="body_entered" from="Tomada" to="." method="_on_Tomada_body_entered"]
[connection signal="body_entered" from="Pilha" to="." method="_on_Tomada_body_entered"]
[connection signal="mouse_entered" from="Pilha" to="." method="_on_Pilha_mouse_entered"]
[connection signal="mouse_exited" from="Pilha" to="." method="_on_Pilha_mouse_exited"]
[connection signal="body_entered" from="Magnetico" to="." method="_on_Magnetico_body_entered"]
[connection signal="body_exited" from="Magnetico" to="." method="_on_Magnetico_body_exited"]
